@@ -1,11 +1,15 @@
 package ru.itis.Tyshenko.jdbc;
 
+import ru.itis.Tyshenko.converter.DataBase;
 import ru.itis.Tyshenko.converter.FieldToStringConverter;
 import ru.itis.Tyshenko.converter.UnknownFieldTypeException;
 
 import javax.sql.DataSource;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.*;
+import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 
 public class EntityManager {
@@ -17,50 +21,36 @@ public class EntityManager {
     private final String FIELD_VALUES = ":fieldValues";
     private final FieldToStringConverter converterForDB;
 
-    public EntityManager(DataSource dataSource) {
-        converterForDB = new FieldToStringConverter(",", " ");
+    public EntityManager(DataSource dataSource,DataBase dataBase) {
+        converterForDB = new FieldToStringConverter(dataBase);
         template = new JdbcTemplate(dataSource);
-        SQL_CREATE_TABLE = createSourceSqlStatement("create table ", TABLE_NAME_PATTERN, " (", FIELD_NAME_WITH_TYPE_PATTERN, ")");
-        SQL_INSERT = createSourceSqlStatement("insert into", TABLE_NAME_PATTERN, " (", FIELD_NAME_PATTERN, ") ", "values", " (", FIELD_VALUES, ")");
-        SQL_SELECT_BY_ID = createSourceSqlStatement("select ", FIELD_NAME_PATTERN, " from", TABLE_NAME_PATTERN, "where id = ?");
     }
 
-    private String createSourceSqlStatement(String... parts) {
-        StringBuilder builder = new StringBuilder();
-        for (String part : parts) {
-            builder.append(part).append(" ");
-        }
-        return builder.append(";").toString();
-    }
-
-    private final String SQL_CREATE_TABLE;
+    private String SQL_CREATE_TABLE = "create table " + TABLE_NAME_PATTERN + " (" + FIELD_NAME_WITH_TYPE_PATTERN + ")";
 
     public <T> void createTable(String tableName, Class<T> entityClass) {
         try {
-            converterForDB.setFields(entityClass.getDeclaredFields());
-            template.execute(insertValues(SQL_CREATE_TABLE, tableName));
+            template.execute(insertValues(SQL_CREATE_TABLE, entityClass, null, tableName));
         } catch (SQLException | UnknownFieldTypeException | IllegalAccessException e) {
             throw new IllegalArgumentException(e);
         }
     }
 
-    private final String SQL_INSERT;
+    private final String SQL_INSERT = "insert into " + TABLE_NAME_PATTERN + " (" + FIELD_NAME_PATTERN + ") " + "values" + " (" + FIELD_VALUES + ")";
 
     public void save(String tableName, Object entity) {
         try {
-            converterForDB.setObject(entity);
-            template.execute(insertValues(SQL_INSERT, tableName));
+            template.execute(insertValues(SQL_INSERT,entity.getClass(), entity, tableName));
         } catch (SQLException | IllegalAccessException | UnknownFieldTypeException e) {
             throw new IllegalArgumentException(e);
         }
     }
 
-    private final String SQL_SELECT_BY_ID;
+    private final String SQL_SELECT_BY_ID = "select " + FIELD_NAME_PATTERN + " from " + TABLE_NAME_PATTERN + " where id = ?";
 
     public <T, ID> Optional<T> findById(String tableName, Class<T> resultType, Class<ID> idType, ID idValue) {
         try {
-            converterForDB.setFields(resultType.getDeclaredFields());
-            return template.queryForObject(insertValues(SQL_SELECT_BY_ID, tableName), getRowMapper(resultType), idValue);
+            return template.queryForObject(insertValues(SQL_SELECT_BY_ID, resultType, null, tableName), getRowMapper(resultType), idValue);
         } catch (SQLException | UnknownFieldTypeException | IllegalAccessException e) {
             throw new IllegalArgumentException(e);
         }
@@ -68,19 +58,24 @@ public class EntityManager {
 
     //Блок методов низкого уровня абстракции(получение полей и т.д.)
 
-    private String insertValues(String sql, String tableName) throws UnknownFieldTypeException, IllegalAccessException {
+    private <T> String insertValues(String sql, Class<T> resultType, Object object, String tableName) throws UnknownFieldTypeException, IllegalAccessException {
         StringBuilder builder = new StringBuilder(sql);
         while (builder.indexOf(TABLE_NAME_PATTERN) != -1) {
             replacePatternOnValue(builder, TABLE_NAME_PATTERN, tableName);
         }
         while (builder.indexOf(FIELD_NAME_PATTERN) != -1) {
-            replacePatternOnValue(builder, FIELD_NAME_PATTERN, converterForDB.getStringFieldNames());
+            replacePatternOnValue(builder, FIELD_NAME_PATTERN, converterForDB.addValuesInSqlStatement(false, resultType.getDeclaredFields()));
         }
         while (builder.indexOf(FIELD_NAME_WITH_TYPE_PATTERN) != -1) {
-            replacePatternOnValue(builder, FIELD_NAME_WITH_TYPE_PATTERN, converterForDB.getStringFieldsWithTypes());
+            replacePatternOnValue(builder, FIELD_NAME_WITH_TYPE_PATTERN, converterForDB.addValuesInSqlStatement(true, resultType.getDeclaredFields()));
         }
         while (builder.indexOf(FIELD_VALUES) != -1) {
-            replacePatternOnValue(builder, FIELD_VALUES, converterForDB.getStringObjectValues());
+            if (object != null) {
+                replacePatternOnValue(builder, FIELD_VALUES, converterForDB.getStringObjectValues(resultType.getDeclaredFields(), object));
+            }
+            else {
+                throw new IllegalStateException("object is null");
+            }
         }
         return builder.toString();
     }
@@ -95,13 +90,13 @@ public class EntityManager {
         return result -> {
             T object;
             try {
-                object = resultType.newInstance();
+                object = resultType.getConstructor().newInstance();
                 Field[] fields = object.getClass().getDeclaredFields();
                 for (Field field : fields) {
                     field.setAccessible(true);
                     field.set(object, result.getObject(field.getName()));
                 }
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new IllegalArgumentException(e);
             }
             return object;
